--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
